Fixing AMS and JumpJet hardpoint stuff.

--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ background:#000;
 }
 
 .empty{
-background:none !important;
+background:none; /*!important;*/
 }
 
 .internal{
